--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,10 @@
     "remix.env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "app/data/datatabse.server.js"
+    "app/data/database.server.js"
   ],
   "compilerOptions": {
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -23,9 +19,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./app/*"
-      ]
+      "~/*": ["./app/*"]
     },
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
